--- a/randomteleport-plugin/src/main/resources/languages/lang.en.yml
+++ b/randomteleport-plugin/src/main/resources/languages/lang.en.yml
@@ -10,7 +10,7 @@ sign:
       create: "&cYou don't have permission to create RandomTeleport preset signs! &o({perm})"
       use: "&cYou don't have permission to use the preset &6{preset}&c! &o({perm})"
 error:
-   location: "&4Error: &cRandomTeleport could not find a save location!"
+   location: "&4Error: &cRandomTeleport could not find a safe location!"
    cooldown: "&cYou have to wait {cooldown_text} before using this RandomTeleport again!"
    parse-error: "&cError while parsing option &f{option}&c with value &f{value}&c: {error}"
    not-found: "&cCould not find &f{what}&c!"
